syntax = "proto3";
option csharp_namespace = "PushPresenceService";
package PushPresenceService;

message UserPushData
{
	string huyamba = 1; 
}


